minor alignment fix

--- a/src/app/components/representatives/representatives.component.css
+++ b/src/app/components/representatives/representatives.component.css
@@ -101,6 +101,7 @@
 }
 
 .delegating-account > .descendant-icon {
+	margin-left: 2px;
 	margin-bottom: 10px;
 	margin-right: 5px;
 	width: 18px;
